# simpleject

./: .editorconfig  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  mypy.ini  pyproject.toml  ruff.toml
example/: async.py  sync.py
src/simpleject/: __init__.py  container.py  decorators.py  errors.py  providers.py  types.py
src/tests/: test_container.py  test_inject.py  test_providers.py
