[project]
name = "simpleject"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MahmudulHassan5809", email = "mahmudul.hassan240@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
simpleject = "simpleject:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest-asyncio>=1.0.0",
    "pytest>=8.4.0",
    "ruff>=0.11.12",
    "simpleject",
]

[tool.uv.sources]
simpleject = { workspace = true }
